src/elements/snapshots/capitaine__elements__flex__tests__empty_rowcol-2.snap
---
source: src/elements/flex.rs
expression: column
---
Column {
    child: EmptyElement(
        PhantomData,
        PhantomData,
    ),
    _comp_state: PhantomData,
    _comp_event: PhantomData,
}
