src/elements/snapshots/capitaine__elements__flex__tests__empty_rowcol-3.snap
---
source: src/elements/flex.rs
expression: row_data
---
(
    RowData {
        child: EmptyElementData(
            PhantomData,
            PhantomData,
        ),
        _comp_state: PhantomData,
        _comp_event: PhantomData,
    },
    (),
)
