src/elements/snapshots/capitaine__elements__flex__tests__new_row_multi_items-2.snap
---
source: src/elements/flex.rs
expression: row_data
---
(
    RowData {
        child: ElementTupleData(
            LabelData(
                "Hello",
                FlexParams {
                    flex: 1.0,
                    alignment: None,
                },
                PhantomData,
                PhantomData,
            ),
            LabelData(
                "Hello2",
                FlexParams {
                    flex: 1.0,
                    alignment: None,
                },
                PhantomData,
                PhantomData,
            ),
            LabelData(
                "Hello3",
                FlexParams {
                    flex: 1.0,
                    alignment: None,
                },
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            PhantomData,
            PhantomData,
        ),
        flex: FlexParams {
            flex: 1.0,
            alignment: None,
        },
        flex_container: FlexContainerParams {
            cross_alignment: Center,
            main_alignment: Start,
            fill_major_axis: false,
        },
        _comp_state: PhantomData,
        _comp_event: PhantomData,
    },
    (
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
    ),
)
