src/elements/snapshots/capitaine__elements__flex__tests__new_rowcol_single_item-2.snap
---
source: src/elements/flex.rs
expression: column
---
Column {
    child: ElementTuple_1(
        Label(
            "Greetings",
            FlexParams {
                flex: 1.0,
                alignment: None,
            },
            PhantomData,
            PhantomData,
        ),
        PhantomData,
        PhantomData,
    ),
    flex: FlexParams {
        flex: 1.0,
        alignment: None,
    },
    flex_container: FlexContainerParams {
        cross_alignment: Center,
        main_alignment: Start,
        fill_major_axis: false,
    },
    _comp_state: PhantomData,
    _comp_event: PhantomData,
}
