src/elements/snapshots/capitaine__elements__flex__tests__new_rowcol_single_item-3.snap
---
source: src/elements/flex.rs
expression: row_data
---
(
    RowData {
        child: ElementTupleData(
            LabelData(
                "Hello",
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
            ),
            PhantomData,
        ),
        _expl_state: PhantomData,
    },
    (
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
    ),
)
