src/elements/snapshots/capitaine__elements__flex__tests__new_rowcol_single_item-4.snap
---
source: src/elements/flex.rs
expression: column_data
---
(
    ColumnData {
        child: ElementTupleData(
            LabelData(
                "Greetings",
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            EmptyElementData(
                PhantomData,
                PhantomData,
            ),
            PhantomData,
            PhantomData,
        ),
        _comp_state: PhantomData,
        _comp_event: PhantomData,
    },
    (
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
    ),
)
